examples/error/src/app/settings/screen.tsx
import { Text } from 'ink'

export default function SettingsScreen() {
  return <Text>Settings Page</Text>
}
